[FIX] web: reduce size of boxed layout header
Steps to reproduce issue:

1. Select a boxed layout document
2. Create an invoice and add lines until the pdf version is on two pages
3. Print the pdf
4. On every page except the first one, the body of the document is cropped by the header

Explanation:

The PDF consists of three parts: the header, the footer and the body, and they are added separately. The body is delimited by the paper format and margins. Those do not depend on the size of the header and the footer.
In the boxed layout, the height of the header is bigger than the default size of the top margin of the body. Because of that, it covers a part of the body.

Suggested fix:

By removing some whitespace, the header size has been reduced to a size smaller than the default margins of the document while keeping every information readable.

opw-3768511

X-original-commit: 08ec6a850b1959f71833d1ea7b39f50ab7ff4ed8

--- a/addons/web/static/src/webclient/actions/reports/layout_assets/layout_boxed.scss
+++ b/addons/web/static/src/webclient/actions/reports/layout_assets/layout_boxed.scss
@@ -8,9 +8,13 @@
         max-height: 100px;
     }
     h4 {
+        margin-bottom: 0;
         color: #999999;
         font-weight: 700;
         text-transform: uppercase;
+    }
+    ul, p {
+        margin-bottom: 0;
     }
 }
 .o_boxed_footer {
